// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Works with the cache 1`] = `
{
  "height": 451,
  "images": [
    {
      "height": 451,
      "path": "foobar/ab790bc248982116-501.jpg",
      "width": 501,
    },
  ],
  "src": "foobar/ab790bc248982116-501.jpg",
  "srcSet": "foobar/ab790bc248982116-501.jpg 501w",
  "toString": [Function],
  "width": 501,
}
`;

exports[`creates jpeg extension 1`] = `
{
  "height": 395,
  "images": [
    {
      "height": 395,
      "path": "foobar/f93d9af4a72634bc-439.jpeg",
      "width": 439,
    },
  ],
  "src": "foobar/f93d9af4a72634bc-439.jpeg",
  "srcSet": "foobar/f93d9af4a72634bc-439.jpeg 439w",
  "toString": [Function],
  "width": 439,
}
`;

exports[`disable 1`] = `
{
  "images": [
    {
      "height": 100,
      "path": "foobar/82e6d197b5ce433a-100.jpg",
      "width": 100,
    },
  ],
  "src": "foobar/82e6d197b5ce433a-100.jpg",
  "srcSet": "foobar/82e6d197b5ce433a-100.jpg",
  "toString": [Function],
}
`;

exports[`doesn't emit file 1`] = `
{
  "height": 225,
  "images": [
    {
      "height": 225,
      "path": "foobar/0a229ed85b2f5618-250.jpg",
      "width": 250,
    },
  ],
  "src": "foobar/0a229ed85b2f5618-250.jpg",
  "srcSet": "foobar/0a229ed85b2f5618-250.jpg 250w",
  "toString": [Function],
  "width": 250,
}
`;

exports[`hash lenght output should be relative to context 1`] = `
{
  "height": 900,
  "images": [
    {
      "height": 450,
      "path": "foobar/test/282d046d-500.jpg",
      "width": 500,
    },
    {
      "height": 675,
      "path": "foobar/test/b8e60128-750.jpg",
      "width": 750,
    },
    {
      "height": 900,
      "path": "foobar/test/3cf3c375-1000.jpg",
      "width": 1000,
    },
  ],
  "src": "foobar/test/3cf3c375-1000.jpg",
  "srcSet": "foobar/test/282d046d-500.jpg 500w,foobar/test/b8e60128-750.jpg 750w,foobar/test/3cf3c375-1000.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`jpg to webp 1`] = `
{
  "height": 900,
  "images": [
    {
      "height": 450,
      "path": "foobar/8593c1f9da542c50-500.webp",
      "width": 500,
    },
    {
      "height": 675,
      "path": "foobar/72befca36bd004a7-750.webp",
      "width": 750,
    },
    {
      "height": 900,
      "path": "foobar/c66204d304cfe4fd-1000.webp",
      "width": 1000,
    },
  ],
  "src": "foobar/c66204d304cfe4fd-1000.webp",
  "srcSet": "foobar/8593c1f9da542c50-500.webp 500w,foobar/72befca36bd004a7-750.webp 750w,foobar/c66204d304cfe4fd-1000.webp 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`multiple sizes 1`] = `
{
  "height": 900,
  "images": [
    {
      "height": 450,
      "path": "foobar/282d046d550fa19c-500.jpg",
      "width": 500,
    },
    {
      "height": 900,
      "path": "foobar/3cf3c37514578847-1000.jpg",
      "width": 1000,
    },
  ],
  "src": "foobar/3cf3c37514578847-1000.jpg",
  "srcSet": "foobar/282d046d550fa19c-500.jpg 500w,foobar/3cf3c37514578847-1000.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`output first resized image height & width 1`] = `
{
  "height": 450,
  "images": [
    {
      "height": 450,
      "path": "foobar/282d046d550fa19c-500.jpg",
      "width": 500,
    },
  ],
  "src": "foobar/282d046d550fa19c-500.jpg",
  "srcSet": "foobar/282d046d550fa19c-500.jpg 500w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`output should be in outputPath dir 1`] = `
{
  "height": 900,
  "images": [
    {
      "height": 450,
      "path": "foobar/img/282d046d550fa19c-500.jpg",
      "width": 500,
    },
    {
      "height": 675,
      "path": "foobar/img/b8e6012830c98919-750.jpg",
      "width": 750,
    },
    {
      "height": 900,
      "path": "foobar/img/3cf3c37514578847-1000.jpg",
      "width": 1000,
    },
  ],
  "src": "foobar/img/3cf3c37514578847-1000.jpg",
  "srcSet": "foobar/img/282d046d550fa19c-500.jpg 500w,foobar/img/b8e6012830c98919-750.jpg 750w,foobar/img/3cf3c37514578847-1000.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`output should be relative to context 1`] = `
{
  "height": 900,
  "images": [
    {
      "height": 450,
      "path": "foobar/test/282d046d550fa19c-500x450.jpg",
      "width": 500,
    },
    {
      "height": 675,
      "path": "foobar/test/b8e6012830c98919-750x675.jpg",
      "width": 750,
    },
    {
      "height": 900,
      "path": "foobar/test/3cf3c37514578847-1000x900.jpg",
      "width": 1000,
    },
  ],
  "src": "foobar/test/3cf3c37514578847-1000x900.jpg",
  "srcSet": "foobar/test/282d046d550fa19c-500x450.jpg 500w,foobar/test/b8e6012830c98919-750x675.jpg 750w,foobar/test/3cf3c37514578847-1000x900.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`override min and max with size 1`] = `
{
  "height": 90,
  "images": [
    {
      "height": 90,
      "path": "foobar/661fbbbdbe7372a2-100.jpg",
      "width": 100,
    },
  ],
  "src": "foobar/661fbbbdbe7372a2-100.jpg",
  "srcSet": "foobar/661fbbbdbe7372a2-100.jpg 100w",
  "toString": [Function],
  "width": 100,
}
`;

exports[`override min and max with sizes 1`] = `
{
  "height": 180,
  "images": [
    {
      "height": 90,
      "path": "foobar/661fbbbdbe7372a2-100.jpg",
      "width": 100,
    },
    {
      "height": 180,
      "path": "foobar/daae2e5f7f65b269-200.jpg",
      "width": 200,
    },
  ],
  "src": "foobar/daae2e5f7f65b269-200.jpg",
  "srcSet": "foobar/661fbbbdbe7372a2-100.jpg 100w,foobar/daae2e5f7f65b269-200.jpg 200w",
  "toString": [Function],
  "width": 200,
}
`;

exports[`parses json notation 1`] = `
{
  "height": 180,
  "images": [
    {
      "height": 45,
      "path": "foobar/b58d8935f3e689e3-50.webp",
      "width": 50,
    },
    {
      "height": 90,
      "path": "foobar/fffbb70a2c269cf1-100.webp",
      "width": 100,
    },
    {
      "height": 180,
      "path": "foobar/701bf549670b5294-200.webp",
      "width": 200,
    },
  ],
  "src": "foobar/701bf549670b5294-200.webp",
  "srcSet": "foobar/b58d8935f3e689e3-50.webp 50w,foobar/fffbb70a2c269cf1-100.webp 100w,foobar/701bf549670b5294-200.webp 200w",
  "toString": [Function],
  "width": 200,
}
`;

exports[`png 1`] = `
{
  "height": 595,
  "images": [
    {
      "height": 580,
      "path": "foobar/ed6170e9b0b0edf0-500.png",
      "width": 500,
    },
    {
      "height": 595,
      "path": "foobar/418c98c2d061efc6-513.png",
      "width": 513,
    },
  ],
  "src": "foobar/418c98c2d061efc6-513.png",
  "srcSet": "foobar/ed6170e9b0b0edf0-500.png 500w,foobar/418c98c2d061efc6-513.png 513w",
  "toString": [Function],
  "width": 513,
}
`;

exports[`png to avif 1`] = `
{
  "height": 595,
  "images": [
    {
      "height": 595,
      "path": "foobar/54f4e72270566ed5-513.avif",
      "width": 513,
    },
  ],
  "src": "foobar/54f4e72270566ed5-513.avif",
  "srcSet": "foobar/54f4e72270566ed5-513.avif 513w",
  "toString": [Function],
  "width": 513,
}
`;

exports[`png to avif 2`] = `
{
  "height": 900,
  "images": [
    {
      "height": 450,
      "path": "foobar/99b6b84c23e8a9b4-500.avif",
      "width": 500,
    },
    {
      "height": 675,
      "path": "foobar/d0b22cf68e1f393a-750.avif",
      "width": 750,
    },
    {
      "height": 900,
      "path": "foobar/6f9cba284621e494-1000.avif",
      "width": 1000,
    },
  ],
  "src": "foobar/6f9cba284621e494-1000.avif",
  "srcSet": "foobar/99b6b84c23e8a9b4-500.avif 500w,foobar/d0b22cf68e1f393a-750.avif 750w,foobar/6f9cba284621e494-1000.avif 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`png to jpeg with background color 1`] = `
{
  "height": 595,
  "images": [
    {
      "height": 580,
      "path": "foobar/0be420cbedde023f-500.jpg",
      "width": 500,
    },
    {
      "height": 595,
      "path": "foobar/9e08ba9531804694-513.jpg",
      "width": 513,
    },
  ],
  "src": "foobar/9e08ba9531804694-513.jpg",
  "srcSet": "foobar/0be420cbedde023f-500.jpg 500w,foobar/9e08ba9531804694-513.jpg 513w",
  "toString": [Function],
  "width": 513,
}
`;

exports[`png to webp with transparent background 1`] = `
{
  "height": 595,
  "images": [
    {
      "height": 580,
      "path": "foobar/548d85cfef6a6c88-500.webp",
      "width": 500,
    },
    {
      "height": 595,
      "path": "foobar/924e13d10c98fb28-513.webp",
      "width": 513,
    },
  ],
  "src": "foobar/924e13d10c98fb28-513.webp",
  "srcSet": "foobar/548d85cfef6a6c88-500.webp 500w,foobar/924e13d10c98fb28-513.webp 513w",
  "toString": [Function],
  "width": 513,
}
`;

exports[`preserves rotation 1`] = `
{
  "height": 554,
  "images": [
    {
      "height": 554,
      "path": "foobar/eb9b881857272a9d-499.jpg",
      "width": 499,
    },
  ],
  "src": "foobar/eb9b881857272a9d-499.jpg",
  "srcSet": "foobar/eb9b881857272a9d-499.jpg 499w",
  "toString": [Function],
  "width": 499,
}
`;

exports[`progressive image 1`] = `
{
  "height": 864,
  "images": [
    {
      "height": 684,
      "path": "foobar/e971e26ec2eea1f1-760.jpg",
      "width": 760,
    },
    {
      "height": 864,
      "path": "foobar/e5e8c73f5f931a48-960.jpg",
      "width": 960,
    },
  ],
  "src": "foobar/e5e8c73f5f931a48-960.jpg",
  "srcSet": "foobar/e971e26ec2eea1f1-760.jpg 760w,foobar/e5e8c73f5f931a48-960.jpg 960w",
  "toString": [Function],
  "width": 960,
}
`;

exports[`public path should replace global publicPath 1`] = `
{
  "height": 900,
  "images": [
    {
      "height": 450,
      "path": "public/282d046d550fa19c-500.jpg",
      "width": 500,
    },
    {
      "height": 675,
      "path": "public/b8e6012830c98919-750.jpg",
      "width": 750,
    },
    {
      "height": 900,
      "path": "public/3cf3c37514578847-1000.jpg",
      "width": 1000,
    },
  ],
  "src": "public/3cf3c37514578847-1000.jpg",
  "srcSet": "public/282d046d550fa19c-500.jpg 500w,public/b8e6012830c98919-750.jpg 750w,public/3cf3c37514578847-1000.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`rotates 90 1`] = `
{
  "height": 666,
  "images": [
    {
      "height": 666,
      "path": "foobar/aa309fc022524f4b-599.jpg",
      "width": 599,
    },
  ],
  "src": "foobar/aa309fc022524f4b-599.jpg",
  "srcSet": "foobar/aa309fc022524f4b-599.jpg 599w",
  "toString": [Function],
  "width": 599,
}
`;

exports[`single size 1`] = `
{
  "height": 450,
  "images": [
    {
      "height": 450,
      "path": "foobar/282d046d550fa19c-500.jpg",
      "width": 500,
    },
  ],
  "src": "foobar/282d046d550fa19c-500.jpg",
  "srcSet": "foobar/282d046d550fa19c-500.jpg 500w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with min and max sizes 1`] = `
{
  "height": 900,
  "images": [
    {
      "height": 450,
      "path": "foobar/282d046d550fa19c-500.jpg",
      "width": 500,
    },
    {
      "height": 675,
      "path": "foobar/b8e6012830c98919-750.jpg",
      "width": 750,
    },
    {
      "height": 900,
      "path": "foobar/3cf3c37514578847-1000.jpg",
      "width": 1000,
    },
  ],
  "src": "foobar/3cf3c37514578847-1000.jpg",
  "srcSet": "foobar/282d046d550fa19c-500.jpg 500w,foobar/b8e6012830c98919-750.jpg 750w,foobar/3cf3c37514578847-1000.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`with min and max sizes options 1`] = `
{
  "height": 270,
  "images": [
    {
      "height": 90,
      "path": "foobar/661fbbbdbe7372a2-100.jpg",
      "width": 100,
    },
    {
      "height": 150,
      "path": "foobar/87ddc3296017abd7-167.jpg",
      "width": 167,
    },
    {
      "height": 211,
      "path": "foobar/c792e1e8f501c416-234.jpg",
      "width": 234,
    },
    {
      "height": 270,
      "path": "foobar/5de63dd31e93ce82-300.jpg",
      "width": 300,
    },
  ],
  "src": "foobar/5de63dd31e93ce82-300.jpg",
  "srcSet": "foobar/661fbbbdbe7372a2-100.jpg 100w,foobar/87ddc3296017abd7-167.jpg 167w,foobar/c792e1e8f501c416-234.jpg 234w,foobar/5de63dd31e93ce82-300.jpg 300w",
  "toString": [Function],
  "width": 300,
}
`;

exports[`with min and max sizes, and default steps 1`] = `
{
  "height": 900,
  "images": [
    {
      "height": 450,
      "path": "foobar/282d046d550fa19c-500.jpg",
      "width": 500,
    },
    {
      "height": 675,
      "path": "foobar/b8e6012830c98919-750.jpg",
      "width": 750,
    },
    {
      "height": 900,
      "path": "foobar/3cf3c37514578847-1000.jpg",
      "width": 1000,
    },
  ],
  "src": "foobar/3cf3c37514578847-1000.jpg",
  "srcSet": "foobar/282d046d550fa19c-500.jpg 500w,foobar/b8e6012830c98919-750.jpg 750w,foobar/3cf3c37514578847-1000.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`with placeholder image 1`] = `
{
  "height": 900,
  "images": [
    {
      "height": 450,
      "path": "foobar/282d046d550fa19c-500.jpg",
      "width": 500,
    },
    {
      "height": 675,
      "path": "foobar/b8e6012830c98919-750.jpg",
      "width": 750,
    },
    {
      "height": 900,
      "path": "foobar/3cf3c37514578847-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": "data:image/jpeg;base64,/9j/2wBDAAUDBAQEAwUEBAQFBQUGBwwIBwcHBw8LCwkMEQ8SEhEPERETFhwXExQaFRERGCEYGh0dHx8fExciJCIeJBweHx7/2wBDAQUFBQcGBw4ICA4eFBEUHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh7/wAARCAAkACgDASIAAhEBAxEB/8QAHAAAAgEFAQAAAAAAAAAAAAAAAAcGAQIDBAgF/8QALBAAAQMDAwIGAgIDAAAAAAAAAQIDBAAFEQYSIQcxCBMiQVFhFDJxgSNSgv/EABgBAAMBAQAAAAAAAAAAAAAAAAABAwIE/8QAHBEAAwEBAAMBAAAAAAAAAAAAAAECEQMEEjEi/9oADAMBAAIRAxEAPwDx734dA/cGU2i4Q4EIq/yqKFlxCfhKckKP2SMVpK8M8tN1YWjVMd6EFEuhyGpLmPYABRB++RXSrzrEaO7JkONtMMpK3HFcJQkDJJPsBSk1N4g9FWuQti2MTL0pPHms4aaJ+lK5P8gVdzK+k02RK+eGW1yGiu2agfiyOf2jhTZ/oHI/o1F3/DprKzSok+0XK3XVxs5eaJLB/wCSrIPHzim1oTrvpfUl4ZtUuDKs8iSdrLjriXGlK9klQA25+SMU02pMN7HkyY7u47RscSrJ+OD3ocRSNTdS00JHRnR2S5KZm6tWx5SCFfgsK3biP919sfQ7/NFPEoBGO/0aKUcOcLEivXyevWtpiT1b0/6h3WxyxqzqGXbfHjrcW00A02vakn14CQRx3Oa5qMMuHc2pLiAAco9QI7c/Fd6zLdDmQnYsxhMhmQkodZc9SFg9wR2NL689JIz+sIOorSiBAMdSQ6x+MPKcSn9SEpwAocd+OB8Vmo34SVYIjpn01vd8XMlNlMF+3Ppa8uQClW7bnGPbgim30i6aTdNa1YvLjzCY6W1LlDzN298hQASMD0jcDn+am19tV6UFoQhvdL4clNN4XuA9JJByOBjJ7Vs9LLfqBnTezUbi3ZKZLnlvqSlKnW8+klI7e4rKj9D9nhLwUr5HA9xiiqeQU5IORRXRpMyoGVE5NWuZSeCaKKGBayoqCyrBrMrhIGe9FFCAByM+570UUUwP/9k=",
  "src": "foobar/3cf3c37514578847-1000.jpg",
  "srcSet": "foobar/282d046d550fa19c-500.jpg 500w,foobar/b8e6012830c98919-750.jpg 750w,foobar/3cf3c37514578847-1000.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`with placeholder image on image with size 1`] = `
{
  "height": 360,
  "images": [
    {
      "height": 360,
      "path": "foobar/c985fe28cb56f01d-400.jpg",
      "width": 400,
    },
  ],
  "placeholder": "data:image/jpeg;base64,/9j/2wBDAAUDBAQEAwUEBAQFBQUGBwwIBwcHBw8LCwkMEQ8SEhEPERETFhwXExQaFRERGCEYGh0dHx8fExciJCIeJBweHx7/2wBDAQUFBQcGBw4ICA4eFBEUHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh7/wAARCAAkACgDASIAAhEBAxEB/8QAHAAAAgEFAQAAAAAAAAAAAAAAAAcGAQIDBAgF/8QALBAAAQMDAwIGAgIDAAAAAAAAAQIDBAAFEQYSIQcxCBMiQVFhFDJxgSNSgv/EABgBAAMBAQAAAAAAAAAAAAAAAAABAwIE/8QAHBEAAwEBAAMBAAAAAAAAAAAAAAECEQMEEjEi/9oADAMBAAIRAxEAPwDx734dA/cGU2i4Q4EIq/yqKFlxCfhKckKP2SMVpK8M8tN1YWjVMd6EFEuhyGpLmPYABRB++RXSrzrEaO7JkONtMMpK3HFcJQkDJJPsBSk1N4g9FWuQti2MTL0pPHms4aaJ+lK5P8gVdzK+k02RK+eGW1yGiu2agfiyOf2jhTZ/oHI/o1F3/DprKzSok+0XK3XVxs5eaJLB/wCSrIPHzim1oTrvpfUl4ZtUuDKs8iSdrLjriXGlK9klQA25+SMU02pMN7HkyY7u47RscSrJ+OD3ocRSNTdS00JHRnR2S5KZm6tWx5SCFfgsK3biP919sfQ7/NFPEoBGO/0aKUcOcLEivXyevWtpiT1b0/6h3WxyxqzqGXbfHjrcW00A02vakn14CQRx3Oa5qMMuHc2pLiAAco9QI7c/Fd6zLdDmQnYsxhMhmQkodZc9SFg9wR2NL689JIz+sIOorSiBAMdSQ6x+MPKcSn9SEpwAocd+OB8Vmo34SVYIjpn01vd8XMlNlMF+3Ppa8uQClW7bnGPbgim30i6aTdNa1YvLjzCY6W1LlDzN298hQASMD0jcDn+am19tV6UFoQhvdL4clNN4XuA9JJByOBjJ7Vs9LLfqBnTezUbi3ZKZLnlvqSlKnW8+klI7e4rKj9D9nhLwUr5HA9xiiqeQU5IORRXRpMyoGVE5NWuZSeCaKKGBayoqCyrBrMrhIGe9FFCAByM+570UUUwP/9k=",
  "src": "foobar/c985fe28cb56f01d-400.jpg",
  "srcSet": "foobar/c985fe28cb56f01d-400.jpg 400w",
  "toString": [Function],
  "width": 400,
}
`;

exports[`with size defined in webpack.config.js 1`] = `
{
  "height": 900,
  "images": [
    {
      "height": 450,
      "path": "foobar/282d046d550fa19c-500.jpg",
      "width": 500,
    },
    {
      "height": 675,
      "path": "foobar/b8e6012830c98919-750.jpg",
      "width": 750,
    },
    {
      "height": 900,
      "path": "foobar/3cf3c37514578847-1000.jpg",
      "width": 1000,
    },
  ],
  "src": "foobar/3cf3c37514578847-1000.jpg",
  "srcSet": "foobar/282d046d550fa19c-500.jpg 500w,foobar/b8e6012830c98919-750.jpg 750w,foobar/3cf3c37514578847-1000.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;
